--- a/Ejercicio1/app/src/main/res/values/strings.xml
+++ b/Ejercicio1/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="titulo">Por favor, ingresa tus datos</string>
     <string name="hintName">Tu nombre</string>
     <string name="hintEmail">tucorreo@ejemplo.com</string>
-    <string name="hintFecha">Tu fecha de nacimiento dd/mm/aaaa</string>
+    <string name="hintFecha">Selecciona día de nacimiento-></string>
     <string name="hintCuenta">Tu número de cuenta</string>
     <string name="txtIngresa">Ingresa</string>
     <string name="txtRegresa">Regresar</string>
