--- a/Ejercicio1/app/src/main/res/values/strings.xml
+++ b/Ejercicio1/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="txtIngresa">Ingresa</string>
     <string name="txtRegresa">Regresar</string>
     <string name="difAnim">Animal</string>
+    <string name="txtSaludo">Hola nombre, tu correo es correo@gmail.com y tu número de cuenta es 123456789</string>
+    <string name="txtEdad">Tu edad es:</string>
+    <string name="txtNaciste">Naciste el 01/02/1998, por lo tanto tu animal en el horóscopo chino es:</string>
 </resources>
